logs/tracking/build.make.681.log.stderr
In file included from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:0:
/home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:33:2: error: ‘boost’ does not name a type
  boost::shared_ptr<Eigen::Matrix<float,4,Eigen::Dynamic> > filter;
  ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp: In member function ‘void DepthFilter::initializeFilter(cv::Mat, Eigen::Matrix<float, 2, -1>)’:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:59:2: error: ‘filter’ was not declared in this scope
  filter->resize(4, size);
  ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp: In member function ‘void DepthFilter::updateFilter(Eigen::Matrix4f, Eigen::Matrix<float, 2, -1>, Eigen::Matrix<float, 2, -1>)’:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:93:18: error: ‘filter’ was not declared in this scope
  for (int i=0; i<filter.cols(); i++) {
                  ^
make[2]: *** [CMakeFiles/tracking.dir/src/DepthFilter.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:20:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
